# als-data-entry-apps

./: giwaxs_app.py  pyproject.toml
ScopeFoundryHW/giwaxs_bar_creator/: giwaxs-bar-creator.ui  giwaxs_bar_controlpanel.py  giwaxs_bar_hardware.py  rga-carrier-creator.ui  rga_carrier_controlpanel.py
ScopeFoundryHW/giwaxs_bar_creator.py/: giwaxs_bar_controlpanel.py
ScopeFoundryHW/mf_crucible/: crucible-layout-2.ui  crucible-layout-test.ui  mf_crucible_controlpanel.py  mf_crucible_hardware.py
