[project]
name = "nirvana"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "h5py>=3.15.1",
    "jupyter>=1.1.1",
    "jurigged>=0.6.1",
    "matplotlib>=3.10.7",
    "pipython>=2.11.0.6",
    "pyqt6>=6.10.0",
    "pyqtgraph>=0.13.7",
    "pyserial>=3.5",
    "pyvisa>=1.15.0",
    "qtconsole>=5.7.0",
    "tqdm>=4.67.1",
]
